--- a/src/app/pages/construction/construction.component.html
+++ b/src/app/pages/construction/construction.component.html
@@ -9,169 +9,8 @@
         <div class="container premag-obras-container premag-padding-top-80 premag-padding-bottom-80">
             <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c2">Principais Obras</h2>
             <div class="premag-deco-retangulo-100 background-premag-color-05 premag-height-1x"></div>
-            <div class="row premag-padding-top-40">
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/ponte-integracao-sao-joao-da-barra.jpg" alt="Ponte de Integração em São João da Barra">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Ponte de Integração em São João da Barra</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Ponte Sobre o Rio Paraíba do Sul – São João da Barra/RJ<br>
-                                <span class="premag-font-weight-600">ANO:</span> 2014<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span> 1.344,30 m<br>
-                                <span class="premag-font-weight-600">LARGURA:</span> 16,20 m<br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span>  Governo do Estado do RJ</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/montagem-varginha.jpg" alt="Montagem Varginha">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Montagem Varginha</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Condomínio Reserva Manhattan Green, Varginha/MG<br>
-                                <span class="premag-font-weight-600">ANO:</span> 2021<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span> 40,00 m<br>
-                                <span class="premag-font-weight-600">LARGURA:</span> 18,00 m<br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span>Construtora Dharma S.A</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/passarela-km-181.jpg" alt="Passarela do KM 181">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Passarela do KM 181</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Passarela em Guararema/SP<br>
-                                <span class="premag-font-weight-600">ANO:</span>2018<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span>275,64 m<br>
-                                <span class="premag-font-weight-600">LARGURA:</span> 2,04 m<br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span>ANTT – Agência Nacional de Transportes Terrestres</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row premag-padding-top-40">
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/montagem-barra-mansa.jpg" alt="Montagem Barra Mansa">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Montagem Barra Mansa</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Barra Mansa/RJ<br>
-                                <span class="premag-font-weight-600">ANO:</span> 2021<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span> <br>
-                                <span class="premag-font-weight-600">LARGURA:</span> <br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span>  Estado do Rio de Janeiro</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/ponte-canal-ponta-negra.jpg" alt="Ponte sobre o Canal de Ponta Negra Maricá">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Ponte sobre o Canal de Ponta Negra Maricá</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Ponte sobre o Canal de Ponta Negra – Maricá/RJ<br>
-                                <span class="premag-font-weight-600">ANO:</span> 2021<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span> <br>
-                                <span class="premag-font-weight-600">LARGURA:</span> <br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span>Prefeitura de Maricá</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/marques-parana.jpg" alt="Marquês Paraná – Niteroi">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Marquês Paraná – Niteroi</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Avenida Marquês de Paraná – Niteroi/RJ<br>
-                                <span class="premag-font-weight-600">ANO:</span>2019<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span><br>
-                                <span class="premag-font-weight-600">LARGURA:</span> <br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span>Prefeitura de Niterói - EMUSA</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row premag-padding-top-40">
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/viaduto-gramacho.jpg" alt="Viaduto Gramacho">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Viaduto Gramacho</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Viaduto em Gramacho - Duque de Caxias/RJ<br>
-                                <span class="premag-font-weight-600">ANO:</span> 2017<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span> <br>
-                                <span class="premag-font-weight-600">LARGURA:</span> <br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span> Prefeitura de Duque de Caxias</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/montagem-travessa.jpg" alt="Montagem Travessa">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Montagem Travessa</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Ponte sobre o Rio João Pinto<br>
-                                <span class="premag-font-weight-600">ANO:</span> 2021<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span> <br>
-                                <span class="premag-font-weight-600">LARGURA:</span> <br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span>Prefeitura Municipal de Duque de Caxias</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/passarela-bambui.jpg" alt="Passarela Bambuí">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Passarela Bambuí</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Passarela no Canal de Bambuí<br>
-                                <span class="premag-font-weight-600">ANO:</span>2020<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span><br>
-                                <span class="premag-font-weight-600">LARGURA:</span> <br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span>SOMAR – Prefeitura do Município de Maricá</p>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row premag-padding-top-40">
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/viaduto-km-236.jpg" alt="Viaduto KM 236">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Viaduto KM 236</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Viaduto no KM 236 – Rod. Senador Mario Covas – BR 101/RJ<br>
-                                <span class="premag-font-weight-600">ANO:</span> 2014<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span> <br>
-                                <span class="premag-font-weight-600">LARGURA:</span> <br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span> Autopista Fluminense</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-lg-4 col-xs-12">
-                    <div class="card">
-                        <img class="card-img-top" src="../../../assets/images/corisco-paraty.jpg" alt="Corisco – Paraty">
-                        <div class="card-body premag-padding-top-40 premag-padding-bottom-80">
-                            <h5 class="card-title premag-font-14 premag-margin-bottom-20 color-c11">Corisco – Paraty</h5>
-                            <p class="card-text premag-font-14">
-                                <span class="premag-font-weight-600">LOCAL:</span> Ponte da Estrada do Corisco<br>
-                                <span class="premag-font-weight-600">ANO:</span> 2020<br>
-                                <span class="premag-font-weight-600">COMPRIMENTO:</span> <br>
-                                <span class="premag-font-weight-600">LARGURA:</span> <br>
-                                <span class="premag-font-weight-600">CLIENTE FINAL:</span>Prefeitura Municipal de Paraty</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col"></div>
-            </div>
+            <app-card-obras></app-card-obras>
+            
         </div>
     </div>
     <div class="premag-clientes-content d-flex flex-row align-items-start">
