Consumindo dados de um backend
Criado o serviço que irá consumir os dados do backend.

--- a/src/app/pages/construction/construction.component.html
+++ b/src/app/pages/construction/construction.component.html
@@ -9,9 +9,9 @@
         <div class="container premag-obras-container premag-padding-top-80 premag-padding-bottom-80">
             <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c2">Principais Obras</h2>
             <div class="premag-deco-retangulo-100 background-premag-color-05 premag-height-1x"></div>
-            
-            <app-card-obras></app-card-obras>
-            
+            <div class="row premag-padding-top-40">
+                <app-card-obras *ngFor="let itensObras of itensObras" [obras]="itensObras" class="col-lg-4 col-xs-12"></app-card-obras>
+            </div>
         </div>
     </div>
     <div class="premag-clientes-content d-flex flex-row align-items-start">
