Carousel das marcas
Melhorias no carousel

--- a/src/app/pages/construction/construction.component.html
+++ b/src/app/pages/construction/construction.component.html
@@ -19,13 +19,7 @@
             <h2 class="premag-page-subtitle premag-secondary-font premag-font-48 text-uppercase color-c6">Principais Clientes</h2>
             <div class="premag-deco-retangulo-100 background-premag-color-05 premag-height-1x"></div>
 
-                <app-carousel
-                    [imagens] = "[
-                        '../../../assets/images/br-petrobras.svg',
-                        '../../../assets/images/embratel-1.svg',
-                        '../../../assets/images/light.svg'
-                    ]"
-                ></app-carousel>
+                <app-carousel></app-carousel>
         </div>
     </div>
 </div>
