--- a/src/app/elements/carousel/carousel.component.html
+++ b/src/app/elements/carousel/carousel.component.html
@@ -1,11 +1,11 @@
 
-  <mdb-carousel [isControls]="true" class="carousel-multi-item multi-animation" [type]="'carousel-multi-item'" [animation]="'slide'">
+  <mdb-carousel [isControls]="false" class="carousel-multi-item multi-animation" [type]="'carousel-multi-item'" [animation]="'slide'">
     <mdb-carousel-item *ngFor="let item of slides; let i = index">
       <div class="row">
         <div class="col-md-3" [ngClass]="{'d-none d-md-block': cardIndex !== 0}"
               *ngFor="let card of item; let cardIndex = index">
           <div class="my-1 premag-carousel d-flex flex-column justify-content-center">
-            <img [src]="card.img" alt="Card image cap">
+            <img src={{card.img}} alt="Card image cap" class="premag-width-160 premag-margin-left-80 premag-margin-top-40">
           </div>
         </div>
       </div>
