--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,8 +1,8 @@
 <div class="home" id="home">
-    <div class="premag-banner">
+    <div class="premag-banner premag-height-416">
         <div class="container">
             <div class="row">
-                <div class="col color-c1 premag-margin-top-40 premag-margin-bottom-40">
+                <div class="col color-c1 premag-margin-top-40 premag-margin-bottom-40 premag-font-Raleway">
                     <p>A <span class="premag-color-05">PREMAG</span> foi fundada em 1975 objetivando <span class="premag-color-05">executar obras-de-arte especiais</span> (pontes, viadutos, passarelas etc.) e <span class="premag-color-05">correntes</span> (bueiros, canais etc.), necessárias aos organismos ligados à construção de rodovias e ferrovias, utilizando concreto protendido e/ou armado, pré-fabricado em usina.</p>
                     <p>O <span class="premag-color-05">pioneirismo nesse setor</span> estende-se até aos dias atuais, envolvendo o Sistema <span class="premag-color-05">PREMAG</span> de Construções uma complexa engenharia, integrando as atividades de pré-fabricação, transporte e montagem, onde são utilizadas técnicas e equipamentos desenvolvidos e aprimorados ao longo dos anos pela PREMAG.</p>
                     <p>Já são <span class="premag-color-05">mais de 2000 obras executadas</span> até o momento, promovendo a infraestrutura do País nos estados do Rio de Janeiro, Espírito Santo, Minas Gerais, São Paulo, Bahia e Mato Grosso, para entidades públicas e privadas. Sempre incorporando a experiência, os conhecimentos e colaborações dos grandes profissionais da Engenharia que fizeram parte da nossa história desde a sua origem.         </p>
@@ -17,15 +17,15 @@
         <div class="container">
             <div class="row">
                 <div class="col-12 col-lg-6">
-                    <h2 class="premag-font-title color-c8 text-uppercase premag-margin-top-120 premag-margin-bottom-120 premag-title-mission">Missão</h2>
+                    <h2 class="premag-font-title color-c8 text-uppercase premag-margin-top-120 premag-margin-bottom-120 premag-title-mission premag-font-Kanit">Missão</h2>
                 </div>
-                <div class="col-12 col-lg-6 d-flex flex-row justify-content-center align-items-center">
+                <div class="col-12 col-lg-6 d-flex flex-row justify-content-center align-items-center premag-font-Raleway">
                     <p class="color-c4 fst-italic premag-quote">“Garantir a qualidade de seus serviços e produtos, como premissa básica, proporcionando aos seus contratantes, usuários e a todos envolvidos no processo produtivo o mais alto grau de confiabilidade no seu sistema de construções, de forma a ultrapassar as expectativas usuais”</p>
                 </div>
             </div>
         </div>
     </div>
-    <div class="portfolio premag-secondary-font">
+    <div class="portfolio premag-font-Kanit">
         <div class="row">
             <div class="col-12 col-lg-6 text-uppercase premag-bg-pontes premag-portfolio-item color-c2 fw-bold d-flex justify-content-center align-items-center">Pontes</div>
             <div class="col-12 col-lg-6 background-color-c12 text-uppercase premag-portfolio-item color-c2 fw-bold d-flex justify-content-center align-items-center">Galerias</div>
